--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -204,10 +204,10 @@ cas:
     <a href="${link}">Подробнее</a>
 spam:
   notification:
-    full: "🤖 Антиспам сработал\n👤 ${name}\n📝 ${reason}"
-    muted_only: "🤖 Замьючен за спам\n👤 ${name}\n📝 ${reason}\n⚠️ Не удалось удалить сообщение"
-    deleted_only: "🤖 Спам удалён\n📝 ${reason}\n⚠️ Не удалось замьютить ${name}"
-    no_permissions: "⚠️ <b>Обнаружен спам</b>\n👤 ${name}\n📝 ${reason}\n\n❌ Боту нужны права админа"
+    full: "🚫 ${name} — спам\n${reason}"
+    muted_only: "🔇 ${name} замьючен\n${reason}\n\n⚠️ Сообщение не удалось удалить"
+    deleted_only: "🗑 Спам удалён\n${reason}\n\n⚠️ ${name} не замьючен"
+    no_permissions: "👀 Похоже на спам от ${name}\n${reason}\n\n💡 Дайте мне права админа — сам разберусь"
 
 only_group: Только в группе
 only_admin: Только для админов
