--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -216,40 +216,17 @@ global_ban:
   kicked: "🚫 ${name} исключён — глобальный бан. Причина: ${reason}"
 
 report:
-  only_group: "⚠️ Только в группах"
+  only_group: "Только в группах"
   need_reply: "↩️ Ответь на сообщение"
   cant_report_bot: "🤖 Это бот"
   cant_report_self: "🙃 Сам на себя?"
   cant_report_admin: "👮 Это админ"
-  invalid_target: "❌ Не могу определить автора"
+  invalid_target: "Не могу определить автора"
   rate_limited: "⏳ Подожди ${seconds}с"
-  spam_check_disabled: "❌ Антиспам выключен"
-  no_content: "📭 Нет текста для проверки"
+  spam_check_disabled: "Антиспам выключен в этой группе"
+  no_content: "Нет текста для проверки"
   analyzing: "🔍 Проверяю..."
-  spam_found: |
-    🚨 <b>Спам!</b>
-
-    👤 ${target}
-    📊 ${confidence}%
-    📝 ${reason}
-
-    ✅ ${action}
-
-    <i>Репорт: ${reporter}</i>
-  suspicious: |
-    ⚠️ <b>Подозрительно</b>
-
-    👤 ${target}
-    📊 ${confidence}%
-    📝 ${reason}
-
-    <i>Админы уведомлены</i>
-    <i>Репорт: ${reporter}</i>
-  clean: |
-    ✅ <b>Чисто</b>
-
-    👤 ${target}
-    📊 ${confidence}%
-
-    <i>Проверил: ${reporter}</i>
-  error: "❌ Что-то пошло не так, попробуй позже"
+  spam_found: "🚫 <b>Спам</b> от ${target}\n${reason}\n\n${action}\n\n<i>📣 ${reporter}</i>"
+  suspicious: "🤔 <b>Подозрительно</b> — ${target}\n${reason}\n\n<i>📣 ${reporter}</i>"
+  clean: "✅ ${target} — ок"
+  error: "Что-то пошло не так"
