--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -221,40 +221,17 @@ global_ban:
   kicked: "🚫 ${name} вилучено — глобальний бан. Причина: ${reason}"
 
 report:
-  only_group: "⚠️ Тільки в групах"
+  only_group: "Тільки в групах"
   need_reply: "↩️ Відповідай на повідомлення"
   cant_report_bot: "🤖 Це бот"
   cant_report_self: "🙃 Сам на себе?"
   cant_report_admin: "👮 Це адмін"
-  invalid_target: "❌ Не можу визначити автора"
-  rate_limited: "⏳ Зачекай ${seconds}с"
-  spam_check_disabled: "❌ Антиспам вимкнено"
-  no_content: "📭 Немає тексту для перевірки"
+  invalid_target: "Не можу визначити автора"
+  rate_limited: "⏳ Почекай ${seconds}с"
+  spam_check_disabled: "Антиспам вимкнено в цій групі"
+  no_content: "Немає тексту для перевірки"
   analyzing: "🔍 Перевіряю..."
-  spam_found: |
-    🚨 <b>Спам!</b>
-
-    👤 ${target}
-    📊 ${confidence}%
-    📝 ${reason}
-
-    ✅ ${action}
-
-    <i>Репорт: ${reporter}</i>
-  suspicious: |
-    ⚠️ <b>Підозріло</b>
-
-    👤 ${target}
-    📊 ${confidence}%
-    📝 ${reason}
-
-    <i>Адмінів повідомлено</i>
-    <i>Репорт: ${reporter}</i>
-  clean: |
-    ✅ <b>Чисто</b>
-
-    👤 ${target}
-    📊 ${confidence}%
-
-    <i>Перевірив: ${reporter}</i>
-  error: "❌ Щось пішло не так, спробуй пізніше"
+  spam_found: "🚫 <b>Спам</b> від ${target}\n${reason}\n\n${action}\n\n<i>📣 ${reporter}</i>"
+  suspicious: "🤔 <b>Підозріло</b> — ${target}\n${reason}\n\n<i>📣 ${reporter}</i>"
+  clean: "✅ ${target} — ок"
+  error: "Щось пішло не так"
