feat(logging): integrate pino for structured logging with pretty-printing in development
- Added pino and pino-pretty as dependencies for enhanced logging capabilities.
- Created a logger helper module to configure and manage logging across the application.
- Implemented child loggers for various modules to maintain context in logs.
- Configured logging format and transport options based on the environment.

--- a/locales/by.yaml
+++ b/locales/by.yaml
@@ -160,4 +160,4 @@ del:
   error: <b>Не атрымалася выдаліць</b>\n<pre>${error}</pre>
 
 global_ban:
-  kicked: "🚫 ${name} выключаны — глабальны бан. Прычына: ${reason}"
+  kicked: "🚫 ${name} выключаны — глабальны бан.\n<code>${reason}</code>"
