--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -204,16 +204,16 @@ cas:
     <a href="${link}">Подробнее</a>
 spam:
   notification:
-    full: "🚫 ${name} — спам\n${reason}"
-    muted_only: "🔇 ${name} замьючен\n${reason}\n\n⚠️ Сообщение не удалось удалить"
-    deleted_only: "🗑 Спам удалён\n${reason}\n\n⚠️ ${name} не замьючен"
-    no_permissions: "👀 Похоже на спам от ${name}\n${reason}\n\n💡 Дайте мне права админа — сам разберусь"
+    full: "🚫 ${name} — спам\n<code>${reason}</code>"
+    muted_only: "🔇 ${name} замьючен\n<code>${reason}</code>\n\n⚠️ Сообщение не удалось удалить"
+    deleted_only: "🗑 Спам удалён\n<code>${reason}</code>\n\n⚠️ ${name} не замьючен"
+    no_permissions: "👀 Похоже на спам от ${name}\n<code>${reason}</code>\n\n💡 Дайте мне права админа — сам разберусь"
 
 only_group: Только в группе
 only_admin: Только для админов
 
 global_ban:
-  kicked: "🚫 ${name} исключён — глобальный бан. Причина: ${reason}"
+  kicked: "🚫 ${name} исключён — глобальный бан.\n<code>${reason}</code>"
 
 report:
   only_group: "Только в группах"
@@ -226,7 +226,7 @@ report:
   spam_check_disabled: "Антиспам выключен в этой группе"
   no_content: "Нет текста для проверки"
   analyzing: "🔍 Проверяю..."
-  spam_found: "🚫 <b>Спам</b> от ${target}\n${reason}\n\n${action}\n\n<i>📣 ${reporter}</i>"
-  suspicious: "🤔 <b>Подозрительно</b> — ${target}\n${reason}\n\n<i>📣 ${reporter}</i>"
+  spam_found: "🚫 <b>Спам</b> от ${target}\n<code>${reason}</code>\n\n${action}\n\n<i>📣 ${reporter}</i>"
+  suspicious: "🤔 <b>Подозрительно</b> — ${target}\n<code>${reason}</code>\n\n<i>📣 ${reporter}</i>"
   clean: "✅ ${target} — ок"
   error: "Что-то пошло не так"
