--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -202,19 +202,19 @@ cas:
     ${name} забанено — є в базі CAS.
     <a href="${link}">Детальніше</a>
 spam:
-  banned: "🚫 ${name} забанено назавжди\n${reason}"
-  muted: "🔇 ${name} замучено на 24 години\n${reason}"
+  banned: "🚫 ${name} забанено назавжди\n<code>${reason}</code>"
+  muted: "🔇 ${name} замучено на 24 години\n<code>${reason}</code>"
   notification:
-    full: "🚫 ${name} — спам\n${reason}"
-    muted_only: "🔇 ${name} замучено\n${reason}\n\n⚠️ Повідомлення не вдалось видалити"
-    deleted_only: "🗑 Спам видалено\n${reason}\n\n⚠️ ${name} не замучено"
-    no_permissions: "👀 Схоже на спам від ${name}\n${reason}\n\n💡 Дайте мені права адміна — сам розберусь"
+    full: "🚫 ${name} — спам\n<code>${reason}</code>"
+    muted_only: "🔇 ${name} замучено\n<code>${reason}</code>\n\n⚠️ Повідомлення не вдалось видалити"
+    deleted_only: "🗑 Спам видалено\n<code>${reason}</code>\n\n⚠️ ${name} не замучено"
+    no_permissions: "👀 Схоже на спам від ${name}\n<code>${reason}</code>\n\n💡 Дайте мені права адміна — сам розберусь"
 
 only_group: Тільки в групі
 only_admin: Тільки для адмінів
 
 global_ban:
-  kicked: "🚫 ${name} вилучено — глобальний бан. Причина: ${reason}"
+  kicked: "🚫 ${name} вилучено — глобальний бан.\n<code>${reason}</code>"
 
 report:
   only_group: "Тільки в групах"
@@ -227,7 +227,7 @@ report:
   spam_check_disabled: "Антиспам вимкнено в цій групі"
   no_content: "Немає тексту для перевірки"
   analyzing: "🔍 Перевіряю..."
-  spam_found: "🚫 <b>Спам</b> від ${target}\n${reason}\n\n${action}\n\n<i>📣 ${reporter}</i>"
-  suspicious: "🤔 <b>Підозріло</b> — ${target}\n${reason}\n\n<i>📣 ${reporter}</i>"
+  spam_found: "🚫 <b>Спам</b> від ${target}\n<code>${reason}</code>\n\n${action}\n\n<i>📣 ${reporter}</i>"
+  suspicious: "🤔 <b>Підозріло</b> — ${target}\n<code>${reason}</code>\n\n<i>📣 ${reporter}</i>"
   clean: "✅ ${target} — ок"
   error: "Щось пішло не так"
