--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -15,30 +15,36 @@ private:
   btn_add: Добавить в группу
 cmd:
   help: |
-    🤖 <b>LyAdminBot</b>
+    <b>Модерация</b>
+    /banan — мут (↩️). Повторно — размут
+    /banan 5m — мут на 5 мин (m/h/d)
+    /kick — выгнать из чата (↩️)
+    /del — удалить сообщение (↩️)
+    /report или @admin — пожаловаться на спам (↩️)
 
-    <b>АНТИСПАМ:</b>
-    <code>!spam</code> — настройки
-    <code>!spam on/off</code> — вкл/выкл
-    <code>!spam globalban on/off</code> — глобальный бан
-    <code>!cas</code> — CAS защита
-    <code>!banChannel</code> — бан каналов
+    <b>Антиспам</b>
+    <code>!spam</code> — статус и все команды
+    <code>!trust</code> / <code>!untrust</code> — доверенные (↩️)
+    <code>!cas</code> — бан спамеров из базы CAS
+    <code>!banChannel</code> — бан анонимных каналов
 
-    <b>МОДЕРАЦИЯ:</b>
-    /banan — бан  •  /kick — кик  •  /del — удалить
-    /report или @admin — проверить на спам (в ответ)
-
-    <b>СТАТИСТИКА:</b>
-    /mystats — твоя стата
-    /top — топ активных  •  /top_banan — топ банов
-
-    <b>ПРИВЕТСТВИЯ:</b>
+    <b>Приветствия</b>
     <code>!welcome</code> — вкл/выкл
-    <code>!gif</code> / <code>!text</code> — добавить контент
+    <code>!gif</code> — добавить/убрать гифку (↩️)
+    <code>!text</code> — текст с %name% (↩️)
 
-    <b>ПРОЧЕЕ:</b>
-    <code>!extra название</code> — быстрые команды #название
-    /extras — список  •  /lang — язык  •  /ping — статус
+    <b>Стата</b>
+    /mystats — твои сообщения и баны
+    /top — самые активные в чате
+    /top_banan — кого чаще всего мутили
+
+    <b>Экстры</b>
+    <code>!extra faq</code> — сохранить как #faq (↩️)
+    /extras — список сохранённых
+
+    /lang — язык · /ping — статус
+
+    <i>↩️ = в ответ на сообщение</i>
   my_stats:
     send_pm: Стату скинул в личку 📊
     chat: |
