--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -15,30 +15,36 @@ private:
   btn_add: Додати в групу
 cmd:
   help: |
-    🤖 <b>LyAdminBot</b>
+    <b>Модерація</b>
+    /banan — мут (↩️). Повторно — розмут
+    /banan 5m — мут на 5 хв (m/h/d)
+    /kick — вигнати з чату (↩️)
+    /del — видалити повідомлення (↩️)
+    /report або @admin — поскаржитись на спам (↩️)
 
-    <b>АНТИСПАМ:</b>
-    <code>!spam</code> — налаштування
-    <code>!spam on/off</code> — вкл/викл
-    <code>!spam globalban on/off</code> — глобальний бан
-    <code>!cas</code> — CAS захист
-    <code>!banChannel</code> — бан каналів
+    <b>Антиспам</b>
+    <code>!spam</code> — статус і всі команди
+    <code>!trust</code> / <code>!untrust</code> — довірені (↩️)
+    <code>!cas</code> — бан спамерів з бази CAS
+    <code>!banChannel</code> — бан анонімних каналів
 
-    <b>МОДЕРАЦІЯ:</b>
-    /banan — бан  •  /kick — кік  •  /del — видалити
-    /report або @admin — перевірити на спам (у відповідь)
-
-    <b>СТАТИСТИКА:</b>
-    /mystats — твоя стата
-    /top — топ активних  •  /top_banan — топ банів
-
-    <b>ПРИВІТАННЯ:</b>
+    <b>Привітання</b>
     <code>!welcome</code> — вкл/викл
-    <code>!gif</code> / <code>!text</code> — додати контент
+    <code>!gif</code> — додати/прибрати гіфку (↩️)
+    <code>!text</code> — текст з %name% (↩️)
 
-    <b>ІНШЕ:</b>
-    <code>!extra назва</code> — швидкі команди #назва
-    /extras — список  •  /lang — мова  •  /ping — статус
+    <b>Стата</b>
+    /mystats — твої повідомлення і бани
+    /top — найактивніші в чаті
+    /top_banan — кого найчастіше мутили
+
+    <b>Екстри</b>
+    <code>!extra faq</code> — зберегти як #faq (↩️)
+    /extras — список збережених
+
+    /lang — мова · /ping — статус
+
+    <i>↩️ = у відповідь на повідомлення</i>
   my_stats:
     send_pm: Стату скинув в особисті 📊
     chat: |
