feat: implement spam settings management with inline keyboard and commands
- Added functions to build inline keyboard for spam settings and format status messages.
- Introduced command handling for enabling/disabling spam settings, managing trusted users, and displaying rules.
- Implemented global ban functionality with expiration checks and actions.
- Created middleware for context loading and data persistence.
- Added error handling middleware to manage bot's chat leaving scenarios.
- Updated localization files for new buttons and callback messages.
- Registered new routes for admin commands and user commands related to spam settings.

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -174,6 +174,24 @@ cmd:
       not_trusted: "❌ ${name} wasn't trusted anyway"
       removed: "✅ ${name} no longer trusted"
       user_not_found: "❌ Can't find ${username}"
+    btn:
+      enable: "Enable"
+      disable: "Disable"
+      globalban_on: "Global ban ✓"
+      globalban_off: "Global ban ✗"
+      rules: "Rules"
+      trusted: "Trusted"
+      help: "Commands"
+    cb:
+      enabled: "Enabled"
+      disabled: "Disabled"
+      globalban_on: "Global ban on"
+      globalban_off: "Global ban off"
+      rules_title: "Rules"
+      trusted_title: "Trusted users"
+      no_rules: "No rules"
+      no_trusted: "No trusted users"
+      error: "Error"
   reset: Settings reset ✓
 settings:
     json:
