--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -174,6 +174,24 @@ cmd:
       not_trusted: "❌ ${name} и так не в доверенных"
       removed: "✅ ${name} больше не в доверенных"
       user_not_found: "❌ Не нашёл ${username}"
+    btn:
+      enable: "Включить"
+      disable: "Выключить"
+      globalban_on: "Глоб. бан ✓"
+      globalban_off: "Глоб. бан ✗"
+      rules: "Правила"
+      trusted: "Доверенные"
+      help: "Команды"
+    cb:
+      enabled: "Включено"
+      disabled: "Выключено"
+      globalban_on: "Глобальный бан включен"
+      globalban_off: "Глобальный бан выключен"
+      rules_title: "Правила"
+      trusted_title: "Доверенные"
+      no_rules: "Правил нет"
+      no_trusted: "Доверенных нет"
+      error: "Ошибка"
   reset: Настройки сброшены ✓
 settings:
     json:
