feat(spam-vote): show timeout result notification
- Show '⏱ Time's up - Spam confirmed' when vote expires with no votes
- Uses group locale (uk/en) for message
- Auto-deletes after 30 seconds

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -292,6 +292,7 @@ spam_vote:
   reputation_change: "📊 ${oldScore} → ${newScore}"
   added_to_signatures: "🔒 Added to spam database"
   status_trusted: "✨ Now trusted"
+  timeout_confirmed: "⏱ <b>Time's up</b>\n\n👤 ${name}\n🔒 Spam confirmed"
   cb:
     invalid_format: "Invalid format"
     invalid_vote: "Invalid vote"
