refactor(spam-vote): use proper i18n and monospace for previews
- Pass i18n instance to processExpiredVotes
- Use i18n.createContext(locale) for group-specific translations
- Change message preview format from quotes to <code> monospace

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -280,7 +280,7 @@ spam_vote:
   in_groups: "in ${count} groups"
   signals: "⚠️ ${signals}"
   ai_reason: "🤖 ${confidence}% — ${reason}"
-  message_preview: "📝 \"${text}\""
+  message_preview: "📝 <code>${text}</code>"
   vote_time: "⏱ ${time}"
   btn_spam: "🚫 Spam"
   btn_clean: "✓ Clean"
