--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -286,7 +286,7 @@ cas:
 
     Этот аккаунт есть в <b>CAS</b> — глобальной базе спамеров Telegram. Туда попадают за массовую рассылку рекламы, скам или мошенничество.
 
-    Если это ошибка — <a href="${link}">обжаловать тут</a>.
+    <a href="${link}">Детали</a> · обжаловать можно там же.
 spam:
   notification:
     full: "🚫 ${name} — спам\n<code>${reason}</code>"
