--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -290,7 +290,7 @@ cas:
 
     Цей акаунт є в <b>CAS</b> — глобальній базі спамерів Telegram. Туди потрапляють за масову розсилку реклами, скам або шахрайство.
 
-    Якщо це помилка — <a href="${link}">оскаржити тут</a>.
+    <a href="${link}">Деталі</a> · оскаржити можна там же.
 spam:
   banned: "🚫 ${name} забанено назавжди\n<code>${reason}</code>"
   muted: "🔇 ${name} замучено на 24 години\n<code>${reason}</code>"
