fix: update emoji IDs in localization files for consistency

--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -294,7 +294,7 @@ spam:
     full: "${e.ban} ${name} — спам\n<code>${reason}</code>"
     muted_only: "${e.mute} ${name} замьючен\n<code>${reason}</code>\n\n${e.warn} Сообщение не удалось удалить"
     deleted_only: "${e.trash} Спам удалён\n<code>${reason}</code>\n\n${e.warn} ${name} не замьючен"
-    no_permissions: "👀 Похоже на спам от ${name}\n<code>${reason}</code>\n\n${e.bulb} Дайте мне права админа — сам разберусь"
+    no_permissions: "${e.eyes} Похоже на спам от ${name}\n<code>${reason}</code>\n\n${e.bulb} Дайте мне права админа — сам разберусь"
   btn_not_spam: "${e.check} Не спам"
   admin_override: "${e.check} <b>Отменено ${admin}</b>\n\n${e.user} ${name} разблокирован"
   admin_override_not_admin: "Только для админов группы"
@@ -329,6 +329,6 @@ report:
   suspicious: "🤔 <b>Подозрительно</b> — ${target}\n<code>${reason}</code>\n\n<i>${e.megaphone} ${reporter}</i>"
   clean: "${e.check} ${target} — ок"
   error: "Что-то пошло не так"
-  clean_thanks: "${e.check} ${target} — ок\n<i>спасибо за бдительность! 👀</i>"
+  clean_thanks: "${e.check} ${target} — ок\n<i>спасибо за бдительность! ${e.eyes}</i>"
   clean_false_alarm: "${e.check} ${target} — ок\n<i>ложная тревога ${e.megaphone}</i>"
   clean_all_good: "${e.check} ${target} — ок\n<i>тут всё чисто ✨</i>"
