--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -295,7 +295,7 @@ spam:
     full: "${e.ban} ${name} — spam\n<code>${reason}</code>"
     muted_only: "${e.mute} ${name} muted\n<code>${reason}</code>\n\n${e.warn} Couldn't delete message"
     deleted_only: "${e.trash} Spam deleted\n<code>${reason}</code>\n\n${e.warn} ${name} not muted"
-    no_permissions: "👀 Looks like spam from ${name}\n<code>${reason}</code>\n\n${e.bulb} Make me admin and I'll handle it"
+    no_permissions: "${e.eyes} Looks like spam from ${name}\n<code>${reason}</code>\n\n${e.bulb} Make me admin and I'll handle it"
   btn_not_spam: "${e.check} Not spam"
   admin_override: "${e.check} <b>Overridden by ${admin}</b>\n\n${e.user} ${name} unblocked"
   admin_override_not_admin: "Only group admins can do this"
@@ -393,6 +393,6 @@ report:
   suspicious: "🤔 <b>Suspicious</b> — ${target}\n<code>${reason}</code>\n\n<i>${e.megaphone} ${reporter}</i>"
   clean: "${e.check} ${target} — ok"
   error: "Something went wrong"
-  clean_thanks: "${e.check} ${target} — ok\n<i>thanks for watching! 👀</i>"
+  clean_thanks: "${e.check} ${target} — ok\n<i>thanks for watching! ${e.eyes}</i>"
   clean_false_alarm: "${e.check} ${target} — ok\n<i>false alarm ${e.megaphone}</i>"
   clean_all_good: "${e.check} ${target} — ok\n<i>all clear here ✨</i>"
